<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#686868"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/txtTitulo"
            android:id="@+id/txtTit"
            android:paddingBottom="150dp"/>

        <RadioGroup
            android:id="@+id/grupoConversiones"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:onClick="eleccionConversor"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioDecimal"
                style="@style/radioButtons"
                android:text="@string/radioDecimal" />

            <RadioButton
                android:id="@+id/radioBinario"
                style="@style/radioButtons"
                android:text="@string/radioBinario" />

            <RadioButton
                android:id="@+id/radioOctal"
                style="@style/radioButtons"
                android:text="@string/radioOctal" />

            <RadioButton
                android:id="@+id/radioHex"
                style="@style/radioButtons"
                android:text="@string/radioHex" />
        </RadioGroup>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:tooltipText="@string/txtIngreso"
            android:id="@+id/txtIngreso"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            style="@style/linInter">
            <CheckBox
                android:id="@+id/chkBin"
                style="@style/checkBoxes"
                android:onClick="conversionBinario"
                android:text="@string/chkBin" />
            <EditText
                style="@style/txtRes"
                android:id="@+id/txtBinRes"/>
        </LinearLayout>


        <LinearLayout
            style="@style/linInter">
            <CheckBox
                style="@style/checkBoxes"
                android:text="@string/chkOct"
                android:id="@+id/chkOct"/>
            <TextView
                style="@style/txtRes"
                android:id="@+id/txtOctRes"/>
        </LinearLayout>

        <LinearLayout
            style="@style/linInter">
            <CheckBox
                style="@style/checkBoxes"
                android:text="@string/chkHex"
                android:id="@+id/chkHex"/>
            <TextView
                style="@style/txtRes"
                android:id="@+id/txtHexRes"
                />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>


